--- a/source/_posts/面试/简历框架.md
+++ b/source/_posts/面试/简历框架.md
@@ -28,75 +28,49 @@ tags:
 
 
 
-
-
 * 大型高并发电商 后端 Java微服务，nodeJs开发经验。
 * 精通订单系统，支付系统模块开发。 
-* 阿里云 docker 部署和运维经验 
+* 阿里云 docker 部署和运维经验。 
 
-* 熟悉mysql,Elastic Search，redis,,pg,moogodb搜索等非关系型和关系型数据库， 索引优化，分布式事务。
+* 熟悉mysql,ElasticSearch,redis,pg,moogodb搜索等非关系型和关系型数据库， 索引优化，分布式事务。
 
-* 项目基础架构搭建
+* 项目基础架构搭建。
 
-* AOP 切片化优雅使用事件总线，
+* AOP 切片化优雅使用事件总线。
 
-* CQRS 读写分离 
+* CQRS 读写分离。
 
 * ELK 日志系统搭建及维护。
 
-* Vue 大数据可视化.百万级数据调优， Vue 大数据可视化.百万级数据调优，
+* Vue 大数据可视化.百万级数据调优， Vue 大数据可视化.百万级数据调优。
 
-## 工作经历 & 项目
+## 工作经历 
 
-小红唇201507-201807
+### 千方科技2020.09- 至今
 
-* Type : 美妆电商，跨境电商，社区种草ToC
+* type：智慧交通，智慧路网，交通大数据
 
 * 业绩：
 
-  *  GMV多少
-  *  重构公司C端系统，使代码更加规范，扩展性更好，部署更加容易。
-  *   完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上
-  *    C端营销体系搭建支撑公司的业务发展战略
+  * 全面负责 研发效能平台整体架构设计，研发，落地，提升办公效率数倍，并以产品形式支持ToB输出。
+  * 自主研发设计智能路口 云边端一体化架构，云边端数据协同一致，整合智能路口相关业务应用形式安装部署，增加复用性 扩展性 ，规范性，项目年收入1500W+。
+  * 支撑物联网平台搭建，并负责保障系统的性能与稳定性，连接全渠道网路通信，承载众多核心数据（路况，灯态，车辆轨迹，雷达）的线上上千实例上亿流量接入
+  * 从无到有设计搭建公司云端微服务基础架构，经过几个版本的迭代已经相对完善稳定。
+  * 支持敏捷云平台开发，建设，稳定运行，参与云原生相关技术的落地工作。
 
 * 内容：
 
-  * 负责
-* 负责通用支付、营销平台的设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等
-    * 备战，保障大促
-* 种草社区
-  * 美妆直播种草平台
-* 大促订单 ，支付
-  
-    *  活动
-       * 秒杀
-       * 预售
-       * 万人团
-       * 优惠券系统
-       * 满减满赠
-       * ERP系统
-       * 物流发货报关 接ERP
-    *  技术：
-       *  针对秒杀等高并发场景有过深刻的思考和实践，针对不同场景做过很多优化，用消息队列方式缓冲大促高并发订单压力，订单发号器机制优化解决秒杀并发问题，大促商品信息缓冲预热(解决缓存DB数据一致性问题)以及订单库存缓存优化设计解决库存中存在的诸多问题。
-       *  针对不同类型的订单处理采用策略模式，订单多重活动规则验证采用责任链模式，使用订单中心以任务方式控制订单状态和流转，用RocketMQ事务消息方式来解耦订单主副流程。同时对redis分布式锁进行了封装优化，使用分布式锁解决分布式系统一致性问题。
-       *  交易中心采用抽象工厂模式实现可横向扩展可插拔，实现交易、对账、监测、通知等功能 ，异步方式实现 支付，退款 ，部分退款，结算 等功能。 同步、异步、定时任务 等方式实现交易的最终一致性。采用分布式事务、RocketMQ延迟消息 等方式实习下单支付流程。
-       *  使用ES 实现商品推荐功能，ES+PG 实现不同类型订单筛选
-       *  订单按用户分库分表，DB冷热分离，多级缓存 提高并发能力，减少DB检索压力。ES聚合 实现多种场景查询统计。
-       *  ELCK 实现 服务日志收集，查看，并输出日志规范后，实现自定义自动化报警通知。
-       *  使用 阿里 sentinel 实现服务限流监控  ，采用hystrix 对服务进行熔断降级，防止雪崩提升集群可用性。 
-  *  技术栈：rokectMQ,kafka,PostGrId,mysql,mongodb,ElasticSearch,sentinel,hystrix，pinpoint,
-  * 金融账单体系
+  1. 负责研发效能平台，敏捷云，物联网平台，统一权限认证平台，智能路口系统的设计研发落地。
+  2. 负责系统功能模块设计，拆分，程序设计，工作分配，研发计划及跟进，日常问题处理等
+  3. 持续改进 和优化业务，保证系统的高可用
+  4. 制定相关技术开发规范，参与制定技术标准。
+  5. 统一基础框架，实现各小组重用基础组件，提升开发效率 。
+  6. 负责协调阿里云EDAS产品部署私有云以及相关软服务提供商的商务合作
+  7. 引入 Flowable 工作流引擎、Drools规则引擎提升开发效率
+  8. 物联网平台对接华为，惠尔视等多家端雷达数据接入，支撑上亿流量数据，并保证稳定运行。
+  9. 服务端招聘专人之一
 
-    
-
-* 项目：
-
-  * 小红唇订单，支付，大促
-  * 小红唇种草社区
-  * 小红唇直播
-  * 金融账单体系
-
-智道网联201808-202008
+### 智道网联201808-202008
 
 * type: 车联网，电商 ，Tob,ToC
 
@@ -124,143 +98,170 @@ tags:
   * 驾驶预警
   * 汽车生活(车载多媒体)
 
-* 项目
+### 小红唇科技201507-201807
 
-  * B端车机销售平台(201808-201905)
-
-    * 内容
-      * 
-      * 移动端，小程序，订单，活动，销售统计，各级代理
-  * 技术亮点：
-      * 从无到有设计搭建公司微服务基础架构,现已上线并稳定运行。包括用户中心、商品、汽车中心、积分、商城等
-    * 完成基于 Pinpoint APM 监控系统的构建与分享，对接告警系统
-  
-  * 汽车生活(201905-202008)
-  
-    * 内容
-      * 汽车移动设备一体化
-      * 智能驾驶
-    * 小梦小梦
-      * 驾驶预警
-      * 
-  * 技术亮点
-      * 基于 ffmpeg 做短视频平台
-    * ， 下属人数：8人 
-    
-    
-
-千方科技2020.09- 至今
-
-* type：智慧交通，智慧路网，交通大数据
+* Type : 美妆电商，跨境电商，社区种草ToC
 
 * 业绩：
-  * 全面负责 研发效能平台整体架构设计，研发，落地，提升办公效率数倍，并以产品形式支持ToB输出。
-  * 自主研发设计智能路口 云边端一体化架构，云边端数据协同一致，整合智能路口相关业务应用形式安装部署，增加复用性 扩展性 ，规范性，项目年收入1500W+。
-  * 支撑物联网平台搭建，并负责保障系统的性能与稳定性，连接全渠道网路通信，承载众多核心数据（路况，灯态，车辆轨迹，雷达）的线上上千实例上亿流量接入
-  * 从无到有设计搭建公司云端微服务基础架构，经过几个版本的迭代已经相对完善稳定。
-  * 支持敏捷云平台开发，建设，稳定运行，参与云原生相关技术的落地工作。
 
-  
+  *  GMV多少
+  *  重构公司C端系统，使代码更加规范，扩展性更好，部署更加容易。
+  *  完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上
+  *  C端营销体系搭建支撑公司的业务发展战略
 
 * 内容：
-  
-  1. 负责研发效能平台，敏捷云，物联网平台，统一权限认证平台，智能路口系统的设计研发落地。
-  2. 负责系统功能模块设计，拆分，程序设计，工作分配，研发计划及跟进，日常问题处理等
-  3. 持续改进 和优化业务，保证系统的高可用
-  4. 制定相关技术开发规范，参与制定技术标准。
-  5. 统一基础框架，实现各小组重用基础组件，提升开发效率 。
-  6. 负责协调阿里云EDAS产品部署私有云以及相关软服务提供商的商务合作
-  7. 引入 Flowable 工作流引擎、Drools规则引擎提升开发效率
-  8. 物联网平台对接华为，惠尔视等多家端雷达数据接入，支撑上亿流量数据，并保证稳定运行。
-  9. 服务端招聘专人之一
-  
-  
-  
-  ------作废	
-  
-  * devops: 研发效能平台
-    * 还作为产品形式支持ToB输出
-  * 敏捷云
-    * 支撑云原生相关技术的落地工作
-  * 统一认证&权限平台
-  * 物联网平台
-    * 承载众多核心数据（路况，灯态，车辆轨迹，雷达）的线上上千实例上亿流量接入
-  * 云边端
-    * 智能路口
-  
-* 项目：
-  * 研发效能平台(2020.09-2021.10)
-    * 职位：项目负责人
-    * 项目介绍：
-    * 项目指责
-      * 人员效能管理：项目，需求，任务缺陷
-      * devops:  主机,docker,k8s ,构建 部署 
-      * git 
-      * 镜像，二进制制品
-    * 关键技术：超时重试、服务发现、负载均衡、限流熔断等服务治理策略
-    * 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、
-    * 技术栈：elasticsearch,kafka,SpringCloud,nacos,mongoDb,mysql,jenkins,Prometheus,redis,xx-job，Gitlab、Nexus ，harbor,hystrix,skywalking，FastDFS，minio
-    
-  * 敏捷云(202110-202210)
-    
-    * 职位：
-    * 项目介绍：
-      * 容器管理
-      * 微服务治理
-      * 集群监控
-      * 中间件管理
-    * 项目指责：
-      * 
-    * 关键 技术：
-      * 云平台从零搭建
-      * Promethos/Grafana、告警平台 
-    
-  * 统一认证&权限平台(2021.7-2021.11)
-    * 技术	
-  
-  * 物联网平台(2021.11-2022.04)
-  
-    * 职位：
-  
-    * 项目介绍
-  
-      * 规则引擎
-      * 流程引擎
-  
-    * 项目职责
-  
-      
-  
-    * 技术
-      * 物联网平台采用 Netty 技术，支持国家 AMQP、JMS、RELASTICSEARCHT/HTTP、COAP、DDS、MQTT 六大物联网通信协议，连接全渠道网路通信；并对各种传感器数据做统一管理，协议类型在协议库中动态维护及增长；保证多源异构的物联网数据接入、存储、智能分析。物联网流式数据使用 Spark 流式计算引擎进行转换，数据存储使用 ES 进行存储。
-  
-  * 智能路口(2022.04-至今)
-  
-    * 职位： 资深后段研发工程师
-  
-      
-  
-    * 项目介绍
-  
-      只能路口项目针对
-  
-    * 项目职责
-  
-      * 负责智能路口整体架构设计，支撑云(ctfo-cloud)-边(ECU)-端(信号机,远程机箱等)一体化架构，设计通用型框架，路口系统实现组件化，产品化，可定制化
-  
-      * 负责智能路口下信号控制平台架构设计，研发（CCU，TMS，TCS，1049服务端/客户端 等）支持多方信号机，检测器，灯态，车流量数据 接入。
-  
-      * 负责智能路口下搭建信号优化平台，接入AI模型，通过AI模型模拟路口车流状况，智能生成多种业界业界先进路口实施方案应对路口多种场景，优化路口车人流情况数倍，并在北京(朝阳，顺义)，重庆，成都，无锡等多城市接入投入使用。
-  
-        
-  
-    * 项目业绩：
-  
-      * 1. 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、 
-        2. 2. 统一基础框架，实现各小组重用基础组件，提升开发效率
-  
-    * 关键技术
-      * (公司自研)云边端一体化架构
-  
+
+  * 负责
+* 负责通用支付、营销平台的设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等
+  * 备战，保障大促
+* 种草社区
+  * 美妆直播种草平台
+* 大促订单 ，支付
+
+  *  活动
+     * 秒杀
+     * 预售
+     * 万人团
+     * 优惠券系统
+     * 满减满赠
+     * ERP系统
+     * 物流发货报关 接ERP
+  *  技术：
+     *  针对秒杀等高并发场景有过深刻的思考和实践，针对不同场景做过很多优化，用消息队列方式缓冲大促高并发订单压力，订单发号器机制优化解决秒杀并发问题，大促商品信息缓冲预热(解决缓存DB数据一致性问题)以及订单库存缓存优化设计解决库存中存在的诸多问题。
+     *  针对不同类型的订单处理采用策略模式，订单多重活动规则验证采用责任链模式，使用订单中心以任务方式控制订单状态和流转，用RocketMQ事务消息方式来解耦订单主副流程。同时对redis分布式锁进行了封装优化，使用分布式锁解决分布式系统一致性问题。
+     *  交易中心采用抽象工厂模式实现可横向扩展可插拔，实现交易、对账、监测、通知等功能 ，异步方式实现 支付，退款 ，部分退款，结算 等功能。 同步、异步、定时任务 等方式实现交易的最终一致性。采用分布式事务、RocketMQ延迟消息 等方式实习下单支付流程。
+     *  使用ES 实现商品推荐功能，ES+PG 实现不同类型订单筛选
+     *  订单按用户分库分表，DB冷热分离，多级缓存 提高并发能力，减少DB检索压力。ES聚合 实现多种场景查询统计。
+     *  ELCK 实现 服务日志收集，查看，并输出日志规范后，实现自定义自动化报警通知。
+     *  使用 阿里 sentinel 实现服务限流监控  ，采用hystrix 对服务进行熔断降级，防止雪崩提升集群可用性。 
+  *  技术栈：rokectMQ,kafka,PostGrId,mysql,mongodb,ElasticSearch,sentinel,hystrix，pinpoint,
+  *  金融账单体系
+
+## 项目
+
+
+
+### 鲲巢智能网联云控系统(2022.04-至今)
+
+  * 职位： 架构师
+
+  * 项目介绍
+
+    千方鲲巢智能网联云控系统具备多种核心基础应用，包括全息感知、车路协同、视觉智能、运行评价、信号优化、信号控制、路口云析等核心功能，打通云边端物理界限，支持软件定义交通基础设施，AI引擎与业务应用深度融合，积累交通行业算法模型，专家经验规则化、规则数字化。
+
+  * 项目职责
+
+    * 参与云控系统整体架构设计，设计通用型框架，路口系统实现组件化，产品化，可定制化
+
+    * 负责信号控制系统重构，支撑云(ctfo-cloud)-边(ECU)-端(信号机,远程机箱等)一体化架构，研发（CCU，TMS，TCS，1049服务端/客户端 等）支持交通基础设施 接入，业务需求拆分，开发任务分配。
+
+    * 负责从 0 到 1 搭建信号优化平台，接入AI引擎，通过AI模型模拟路口车流状况，智能生成多种业界业界先进路口实施方案应对路口多种场景，优化路口车人流情况数倍，并在北京(朝阳，顺义)，重庆，成都，无锡等多城市接入投入使用。
+
+    * 技术驱动，引入业界先进的业务网关方案，主导建设了 OpenAPI 基础设施，帮助客户以统一的规范接入公司多个业务，有效降低接入成本与效率。
+
+    * 
+
       
 
+  * 项目业绩：
+
+    1. 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、 
+    2. 统一基础框架，实现各小组重用基础组件，提升开发效率
+    2. 设计云边数据同步机制，保证云边环境下的数据高可用，低延迟，数据安全等特性。
+
+
+  * 技术栈：kuberctl 生态，ingress,traffic,sidecar,nats，taosDB，Datagrip,redis,Gis,,minio,kafka，
+    
+    
+    
+    
+    
+### 物联网平台(2021.11-2022.04)
+
+  * 职位：资深后端研发工程师
+
+  * 项目介绍
+
+    为解决交通行业中信息孤岛效应、设备的标准化接入、多模数据融合、数据资源有效利用等问题，设备管理平台向应用侧开放API接口，应用侧可以使用API快速集成设备管理平台，实现设备注册、设备获取、属性获取、属性设置、服务调用，运行状态，事件获取等功能。
+    
+  * 项目职责
+
+    * 维护 QPS 十万级系统的稳定高效，参与并主导技术方案设计，负责系统演进开发工作。
+    * 物联网平台对接华为，惠尔视等多家端雷达数据接入，支撑上亿流量数据，并保证稳定运行。
+
+  * 技术亮点
+
+    * 物联网平台采用 Netty 技术，支持国家 AMQP、JMS、RELASTICSEARCHT/HTTP、COAP、DDS、MQTT 六大物联网通信协议，连接全渠道网路通信；物联网流式数据使用 Spark 流式计算引擎进行转换，数据存储使用 ES 进行存储。
+    * 处理高并发性能调优，参与订单主流程系统日常运维并及时处理异常订单问题。
+    
+
+### 敏捷云(202110-202210)
+
+  * 职位：
+  * 项目介绍：
+    * 容器管理
+    * 微服务治理
+    * 集群监控
+    * 中间件管理
+  * 项目指责：
+    * 
+  * 关键 技术：
+    * 云平台从零搭建
+    * Promethos/Grafana、告警平台 
+
+* 统一认证&权限平台(2021.7-2021.11)
+  * 技术	
+
+  * * 
+
+### 研发效能平台(2020.09-2021.10)
+
+  * 职位：项目负责人
+
+  * 项目介绍：
+
+    依托业界领先的敏捷项目管理理念与DevOps体系方法论，依托业界领先的敏捷项目管理理念与DevOps体系方法论，我们将这些优秀的理念与工具融合到产品中，打通了研发过程中的工具链孤岛及协作壁垒。在效能平台，您可以实现从需求提交到产品迭代、代码管理、持续集成到最后持续部署的闭环研发工作流，覆盖敏捷开发全流程，全面提升研发效率。
+
+  * 项目职责
+
+    * 人员效能管理：项目，需求，任务缺陷
+    * devops:  主机,docker,k8s ,构建 部署 
+    * git 
+    * 镜像，二进制制品
+
+  * 关键技术：超时重试、服务发现、负载均衡、限流熔断等服务治理策略
+
+  * 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、
+
+  * 技术栈：elasticsearch,kafka,SpringCloud,nacos,mongoDb,mysql,jenkins,Prometheus,redis,xx-job，Gitlab、Nexus ，harbor,hystrix,skywalking，FastDFS，minio
+
+### B端车机销售平台(201808-201905)
+
+* 内容
+  * 
+  * 移动端，小程序，订单，活动，销售统计，各级代理
+
+* 技术亮点：
+  * 从无到有设计搭建公司微服务基础架构,现已上线并稳定运行。包括用户中心、商品、汽车中心、积分、商城等
+  * 完成基于 Pinpoint APM 监控系统的构建与分享，对接告警系统
+
+* 汽车生活(201905-202008)
+
+  * 内容
+    * 汽车移动设备一体化
+    * 智能驾驶
+  * 小梦小梦
+    * 驾驶预警
+    * 
+* 技术亮点
+  * 基于 ffmpeg 做短视频平台
+  * ， 下属人数：8人 
+
+### 小红唇(201507-201807)
+
+* 项目：
+
+  * 小红唇订单，支付，大促
+  * 小红唇种草社区
+  * 小红唇直播
+  * 金融账单体系
