--- a/source/_posts/面试/简历框架.md
+++ b/source/_posts/面试/简历框架.md
@@ -53,7 +53,7 @@ tags:
 * 业绩：
 
   * 全面负责 研发效能平台整体架构设计，研发，落地，提升办公效率数倍，并以产品形式支持ToB输出。
-  * 自主研发设计智能路口 云边端一体化架构，云边端数据协同一致，整合智能路口相关业务应用形式安装部署，增加复用性 扩展性 ，规范性，项目年收入1500W+。
+  * 自主研发设计智能路口云控平台云边端一体化架构，云边端数据协同一致，支持智能路口相关业务以应用形式安装部署，增加复用性 扩展性 ，规范性，项目年收入1500W+。
   * 支撑物联网平台搭建，并负责保障系统的性能与稳定性，连接全渠道网路通信，承载众多核心数据（路况，灯态，车辆轨迹，雷达）的线上上千实例上亿流量接入
   * 从无到有设计搭建公司云端微服务基础架构，经过几个版本的迭代已经相对完善稳定。
   * 支持敏捷云平台开发，建设，稳定运行，参与云原生相关技术的落地工作。
@@ -101,19 +101,22 @@ tags:
 ### 小红唇科技201507-201807
 
 * Type : 美妆电商，跨境电商，社区种草ToC
-
 * 业绩：
 
+  *  日交易额达到3000万 单台服务瞬时流量达到了QPS3000+
+  *   商城基本操作请求响应时间都在一秒内完成。 部分并发情况引起的延迟最多15秒响应，
+      处理了高并发场景线程堆积问题。
   *  GMV多少
   *  重构公司C端系统，使代码更加规范，扩展性更好，部署更加容易。
   *  完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上
   *  C端营销体系搭建支撑公司的业务发展战略
-
 * 内容：
 
-  * 负责
-* 负责通用支付、营销平台的设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等
-  * 备战，保障大促
+  * 负责双十一，618 秒杀、大促备战。
+  * 负责通用支付、营销平台的设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等
+  * 负责订单系统的系统规划、技术决策和攻关，
+  * 负责订单系统设计、研发，预售，拼团(万人团)，秒杀，满减满赠等各种活动以及优惠券系统设计，研发，日常维护。
+  * 支持小红唇种草社区、美妆直播相关业务研发工作。
 * 种草社区
   * 美妆直播种草平台
 * 大促订单 ，支付
@@ -186,33 +189,40 @@ tags:
     
   * 项目职责
 
-    * 维护 QPS 十万级系统的稳定高效，参与并主导技术方案设计，负责系统演进开发工作。
+    * 支撑物联网平台搭建
+    * 负责保障 QPS 十万级系统的性能与稳定性
+    * 参与并主导技术方案设计，负责系统演进开发工作。
     * 物联网平台对接华为，惠尔视等多家端雷达数据接入，支撑上亿流量数据，并保证稳定运行。
 
   * 技术亮点
 
     * 物联网平台采用 Netty 技术，支持国家 AMQP、JMS、RELASTICSEARCHT/HTTP、COAP、DDS、MQTT 六大物联网通信协议，连接全渠道网路通信；物联网流式数据使用 Spark 流式计算引擎进行转换，数据存储使用 ES 进行存储。
-    * 处理高并发性能调优，参与订单主流程系统日常运维并及时处理异常订单问题。
+    * kafka 集群调优优化 kafka 消费数据QPS 优化到 30w;
+    * 通过消息打包压缩，批处理来减少网络之间的多次IO
+    * 消费端启动多线程来进行并发的数据处理，多线程参数调优
     
+  * 技术栈：kafka,EMQ,spark,ElasticSearch,redis,
 
 ### 敏捷云(202110-202210)
 
   * 职位：
   * 项目介绍：
+    * 在敏捷云系统中研发人员可以快速构建代码库，生产制品，部署发布到任何集群。在集群中有可以管控容器的生命周期，环境变量，容器的CPU内存监控，日志采集，异常报警等等
     * 容器管理
     * 微服务治理
     * 集群监控
     * 中间件管理
-  * 项目指责：
-    * 
-  * 关键 技术：
-    * 云平台从零搭建
+    
+  * 项目职责：
+    * 搭建了公司的私有化云平台和公有云平台
     * Promethos/Grafana、告警平台 
+    * 各个业务项目制作chart应用包
+  * 关键 技术：
+    * 基于kuberControlAPI实现公司私/公有化云平台
+    * harbor镜像 和二进制制品 公有云私有云打通。大镜像包的追加镜像构建。
+    * 
+      
 
-* 统一认证&权限平台(2021.7-2021.11)
-  * 技术	
-
-  * * 
 
 ### 研发效能平台(2020.09-2021.10)
 
@@ -224,27 +234,26 @@ tags:
 
   * 项目职责
 
-    * 人员效能管理：项目，需求，任务缺陷
-    * devops:  主机,docker,k8s ,构建 部署 
-    * git 
-    * 镜像，二进制制品
+    * 利用jenkins系统
+    
+  * 关键技术：
 
-  * 关键技术：超时重试、服务发现、负载均衡、限流熔断等服务治理策略
+    * jenkins 重写二次开发 ，权限重写，pipeline 流水线自动生成，支撑每天数十次到上百次的持续集成与发布。
 
   * 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、
 
   * 技术栈：elasticsearch,kafka,SpringCloud,nacos,mongoDb,mysql,jenkins,Prometheus,redis,xx-job，Gitlab、Nexus ，harbor,hystrix,skywalking，FastDFS，minio
+
+### 智道网联车机端生态(201905-2020.08)
 
 ### B端车机销售平台(201808-201905)
 
 * 内容
   * 
   * 移动端，小程序，订单，活动，销售统计，各级代理
-
 * 技术亮点：
   * 从无到有设计搭建公司微服务基础架构,现已上线并稳定运行。包括用户中心、商品、汽车中心、积分、商城等
   * 完成基于 Pinpoint APM 监控系统的构建与分享，对接告警系统
-
 * 汽车生活(201905-202008)
 
   * 内容
@@ -252,16 +261,48 @@ tags:
     * 智能驾驶
   * 小梦小梦
     * 驾驶预警
-    * 
-* 技术亮点
+* 项目介绍：
+* 关键技术
   * 基于 ffmpeg 做短视频平台
   * ， 下属人数：8人 
+* 技术栈： ffmpeg,kafka
+
+
 
 ### 小红唇(201507-201807)
 
 * 项目：
 
   * 小红唇订单，支付，大促
+  
   * 小红唇种草社区
+  
   * 小红唇直播
+  
   * 金融账单体系
+
+* 项目介绍
+
+  包含小红唇商城
+
+* 项目职责
+
+  * 负责双十一，618 秒杀、大促备战。
+  * 负责 支付中心系统设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等
+  * 负责订单系统的系统规划、技术决策和攻关，包括下单、 预售，拼团(万人团)，秒杀，满减满赠，优惠券等活动，以及订单支付，推送物流ERP等的需求跟进，研发，以及日常维护。
+  * 微服务下沉, 根据sku,spu 抽离出商品微服务，优惠券微服务，活动微服务。
+  * 负责小红唇金融账单体系设计、研发、落地。
+  * 支持小红唇商城，种草社区、美妆直播相关业务研发工作。
+  * 
+
+*  关键技术：
+   *  用消息队列方式缓冲大促高并发订单压力，订单发号器机制优化解决秒杀并发问题，大促商品信息缓冲预热(解决缓存DB数据一致性问题)以及订单库存缓存优化设计解决库存中存在的诸多问题。
+   *  针对不同类型的订单处理采用策略模式，订单多重活动规则验证采用责任链模式，使用订单中心以任务方式控制订单状态和流转，用RocketMQ事务消息方式来解耦订单主副流程。同时对redis分布式锁进行了封装优化，使用分布式锁解决分布式系统一致性问题。
+   *  交易中心采用抽象工厂模式实现可横向扩展可插拔，实现交易、对账、监测、通知等功能 ，异步方式实现 支付，退款 ，部分退款，结算 等功能。 同步、异步、定时任务 等方式实现交易的最终一致性。采用分布式事务、RocketMQ延迟消息 等方式实习下单支付流程。
+   *  商城基本操作请求响应时间都在一秒内完成。 部分并发情况引起的延迟最多15秒响应，
+       处理了高并发场景线程堆积问题。
+   *  使用ES 实现商品推荐功能，ES+PG 实现不同类型订单筛选
+   *  订单按用户分库分表，DB冷热分离，多级缓存 提高并发能力，减少DB检索压力。ES聚合 实现多种场景查询统计。
+   *  ELCK 实现 服务日志收集，查看，并输出日志规范后，实现自定义自动化报警通知。
+   *  使用 阿里 sentinel 实现服务限流监控  ，采用hystrix 对服务进行熔断降级，防止雪崩提升集群可用性。 
+*  技术栈：rokectMQ,kafka,PostGrId,mysql,mongodb,ElasticSearch,sentinel,hystrix，pinpoint,
