--- a/source/_posts/面试/每日一问0420(面试总结).md
+++ b/source/_posts/面试/每日一问0420(面试总结).md
@@ -149,12 +149,12 @@ tags:
 
 千方科技 工作内容 
 这家公司是做交通大数据的，就是在各个交通路口 有很多的信息采集设备，比如摄像头，雷达 等等
-比如我现在在做的一个项目，是对接华为的雷达设备数据。 我们整体是一个云边端的架构。在我们公司有
+比如我现在在做的一个项目(物联网IOT平台)，是对接华为的雷达设备数据。 我们整体是一个云边端的架构。在我们公司有
 自己的服务器，搭建了公司的私有云和公有云并对外提供服务，然后在各个路口，可能多个路口中有一个在一边会部署我们的ECU硬件边设备。
 这个设备用来对接雷达，摄像头等多种端设备数据，并将数据汇总上报到云端。
 我这个需求对接的是华为的雷达设备，它会实时采集路口的车辆信息事件，比如拥堵，车辆行驶方向,路口当前相位，车辆事故等事件。
-它通过kafka来生产事件，发送到我们边端IOT平台来进行消费。一个IOT平台可以对接多个端设备。数据处理后推送到IOT平台的消息总线，EMQ中进行广播，下游第三方可以订阅接入事件来进行根据交通事件做二次开发。
-现在出现了一个问题，华为的雷达数据大概每秒30W的事件，由于不断地上报，消费高峰来临，事件延迟特别高，有的达到30秒的延迟。我接到这个需求要进行调优。将一个事件整个链路优化到一秒内。
+它通过kafka来生产事件，发送到我们边端IOT平台来进行消费（边端IOT平台部署在边端ECU上，硬件资源有限）。一个IOT平台可以对接多个端设备。数据处理后同步到云端IOT平台的消息总线，EMQ中进行广播，下游第三方可以订阅接入事件来进行根据交通事件做二次开发。
+现在出现了一个问题，华为的雷达数据大概每秒30W的事件，由于上报是持续实时的，消费高峰来临，事件延迟特别高，有的达到30秒的延迟。我接到这个需求要进行调优。将一个事件整个链路优化到一秒内。
 然后开始排查原因：我们的IOT平台是一个同样的设备数据接入平台，整体是k8s容器化部署的，设备数据管理和数据接入是两个模块，两个容器部署的，为了实现通用性，设计上用了适配器模式，当前支持TCP，UDP，restAPI,消息队列 等； 当有新的类型设备接入的时候，他会新研发一个适配器的模块就是通过集成实现adapter的方式，然后通过反射的方式 将新适配器对象加载进来，在适配器容器主进程中启动一个子线程来运行这个适配器实例。这样就存在一个问题。由于是容器化部署。
 容器会加载多种类型的适配器启动多个线程共享一个容器的资源，这个适配器是动态加载的，容器资源不好直接扩充，当有这种高并发的大数据流会造成CPU，内存资源不足，有时会出现OOM。
 为了解决这个问题，首先讨论了一个最佳方案： 就是不通过反射，而是用启动新容器的方式，将每种适配器通过容器将资源分开。但由于架构设计上的原因，边设备上的所有配置是由云端统一下发的，现在没办法控制每个适配器容器资源。
@@ -173,7 +173,7 @@ tags:
 
 
 敏捷云系统
-敏捷云系统 基于bubercontrol API ,搭建了公司的私有化云平台和公有云平台，harbor镜像 和二进制制品 公有云私有云打通。大镜像包的追加镜像构建。
+敏捷云系统 基于kubercontrol API ,搭建了公司的私有化云平台和公有云平台，harbor镜像 和二进制制品 公有云私有云打通。大镜像包的追加镜像构建。
 在敏捷云系统中研发人员可以快速构建代码库，生产制品，部署发布到任何集群。在集群中有可以管控容器的生命周期，环境变量，容器的CPU内存监控，日志采集，异常报警等等。
 
 
