--- a/source/_posts/面试/简历框架.md
+++ b/source/_posts/面试/简历框架.md
@@ -79,6 +79,10 @@ tags:
   * 提升驾驶体验
   * 全流程风险管控，实时保障车辆行驶安全。安全态势预测，威胁实时监控
   * 构建高效的团队
+  * 从无到有设计搭建公司微服务基础架构,现已上线并稳定运行。包括用户中心、商品、汽车中心、积分、商城等
+  2. 搭建南北大区销售各级代理体系,支撑稳定可持续的车机全国销售网络。
+
+  3. 蘑菇拍拍通过语音和智能感知 利用车载摄像头抓拍车机周边驾驶行为，参考抖音，通过图片短视频分享，丰富车主驾驶后体验，增强活跃度。
   * 
 
 * 内容：
@@ -144,7 +148,7 @@ tags:
 
 
 
-### 鲲巢智能网联云控系统(2022.04-至今)
+### 鲲巢智能网联云控系统(2022.06-至今)
 
   * 职位： 架构师
 
@@ -156,11 +160,13 @@ tags:
 
     * 参与云控系统整体架构设计，设计通用型框架，路口系统实现组件化，产品化，可定制化
 
-    * 负责信号控制系统重构，支撑云(ctfo-cloud)-边(ECU)-端(信号机,远程机箱等)一体化架构，研发（CCU，TMS，TCS，1049服务端/客户端 等）支持交通基础设施 接入，业务需求拆分，开发任务分配。
+    * 负责信号控制系统重构，系统生态规划,支撑云(ctfo-cloud)-边(ECU)-端(信号机,远程机箱等)一体化架构，研发（CCU，TMS，TCS，1049服务端/客户端 等）支持交通基础设施 接入，业务需求拆分，开发任务分配。
 
     * 负责从 0 到 1 搭建信号优化平台，接入AI引擎，通过AI模型模拟路口车流状况，智能生成多种业界业界先进路口实施方案应对路口多种场景，优化路口车人流情况数倍，并在北京(朝阳，顺义)，重庆，成都，无锡等多城市接入投入使用。
 
     * 技术驱动，引入业界先进的业务网关方案，主导建设了 OpenAPI 基础设施，帮助客户以统一的规范接入公司多个业务，有效降低接入成本与效率。
+
+    * 负责技术评估和选型
 
     * 
 
@@ -179,7 +185,7 @@ tags:
     
     
     
-### 物联网平台(2021.11-2022.04)
+### 物联网平台(2022.01-2022.06)
 
   * 职位：资深后端研发工程师
 
@@ -203,7 +209,7 @@ tags:
     
   * 技术栈：kafka,EMQ,spark,ElasticSearch,redis,
 
-### 敏捷云(202110-202210)
+### 敏捷云(202108-202201)
 
   * 职位：
   * 项目介绍：
@@ -214,7 +220,7 @@ tags:
     * 中间件管理
     
   * 项目职责：
-    * 搭建了公司的私有化云平台和公有云平台
+    *  负责边缘云计算和公有云平台架构设计和系统建设 
     * Promethos/Grafana、告警平台 
     * 各个业务项目制作chart应用包
   * 关键 技术：
@@ -224,7 +230,7 @@ tags:
       
 
 
-### 研发效能平台(2020.09-2021.10)
+### devops(2020.09-2021.08)
 
   * 职位：项目负责人
 
@@ -234,13 +240,14 @@ tags:
 
   * 项目职责
 
-    * 利用jenkins系统
+    * 负责技术选型和架构评审 支撑Devops 和服务治理体系规划和建设
+      2. 负责平台规划，项目技术架构搭建，任务分解、产研测团队分配，以及排期跟踪组内开发人员达成。
+    3. 发现和解决系统各种性能和安全问题，设计和实施对应优化方案。
     
   * 关键技术：
 
     * jenkins 重写二次开发 ，权限重写，pipeline 流水线自动生成，支撑每天数十次到上百次的持续集成与发布。
-
-  * 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、
+      * 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)
 
   * 技术栈：elasticsearch,kafka,SpringCloud,nacos,mongoDb,mysql,jenkins,Prometheus,redis,xx-job，Gitlab、Nexus ，harbor,hystrix,skywalking，FastDFS，minio
 
@@ -254,6 +261,9 @@ tags:
 * 技术亮点：
   * 从无到有设计搭建公司微服务基础架构,现已上线并稳定运行。包括用户中心、商品、汽车中心、积分、商城等
   * 完成基于 Pinpoint APM 监控系统的构建与分享，对接告警系统
+  * 搭建南北大区销售各级代理体系,支撑稳定可持续的车机全国销售网络。
+  * 负责支付中心 搭建，包括优惠、返现、免单、代金券等模块，支撑公司内部各接入的产品线的线上和线下支付汇款，对接财务部。
+  * 销售统计相关业务功能
 * 汽车生活(201905-202008)
 
   * 内容
