--- a/source/_posts/2020/每日一问0325(JVM).md
+++ b/source/_posts/2020/每日一问0325(JVM).md
@@ -41,7 +41,7 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
  #### 直接内存
  NIO 流  堆外内存， 避免 Java堆和NATIVE堆 复制数据。
 
- ### 对象的创建
+ ### 对象创建
 
  1） 类加载检查
 
@@ -54,6 +54,50 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
  4）设置对象头
 
  5) 执行 init 方法  执行前只是虚拟机新的对象产生了 ，执行完 Java代码才认 
+
+### 类加载器
+
+* 启动类加载器(Bootstrap Class loader)  
+
+  * :负责加载<JAVA_HOME>\lib 目录，或者被 -Xbootclasspath 参数制定的路径，例如 jre/lib/rt.jar 里所有的class文件。由C++实现，不是ClassLoader子类。
+  * 由于安全考虑只加载 包名 java、javax、sun开头的类。
+
+* 扩展类加载器(Extension Class loader): 
+
+  * 负责加载Java平台中扩展功能的一些jar包，包括<JAVA_HOME>\lib\ext 目录中 或 java.ext.dirs 指定目录下的jar包
+
+  * 全类名:`sum.misc.Launch$ExtClassLoader`，Java语言实现。
+
+    扩展类加载器的父加载器是`Bootstrap启动类加载器` (注:不是继承关系)
+
+* 应用程序类加载器(Application Class loader)
+
+  * 我们自己开发的应用程序，就是由它进行加载的，负责加载ClassPath路径下所有jar包。
+  * 全类名: `sun.misc.Launcher$AppClassLoader`
+  * 系统类加载器负责加载 `classpath环境变量`所指定的类库，是用户自定义类的默认类加载器。
+
+* 用户自定义的类加载器,负责的加载目录自己决定。
+
+自定义类加载过程
+
+1. 首先使用AppClassLoader类加载器尝试加载，AppClassLoader加载器会先检查它的缓存，查看该类是否已经被加载，有则不加载，没有则向上交给ExtClassLoader加载器。
+2. ExtClassLoader加载器同样会先检查它的缓存，查看该类是否已经被加载，有则不加载，没有则向上交给Bootstrap加载器。
+3. Bootstrap加载器同样会先检查它的缓存，查看该类是否已经被加载。有则不加载，没有则尝试从它负责的目录中加载，
+4. Bootstrap加载器加载失败(不在它负责的目录范围)则向下交给ExtClassLoader加载器。
+5. ExtClassLoader加载器会从它负责的目录中尝试加载，加载失败则向下交给AppClassLoader加载器
+6. AppClassLoader加载器从它负责的classpath尝试加载，加载完成。
+   
+
+### 双亲委派模型
+
+双亲委派模式其实一句话就可以说清楚：任何一个类加载器在接到一个类的加载请求时，都会先让其父类进行加载，只有父类无法加载（或者没有父类）的情况下，才尝试自己加载。
+
+双亲委派机制的实现其实就是在loadClass方法中实现的。 直接调用findClass方法就可以跳过双亲委派机制,这样就可以直接加载,而不用向上委托了。
+
+好处：
+
+1. 避免类的重复加载：当父加载器已经加载该类时，就没有必要子加载器再加载一遍，保证被加载类的唯一性。
+2. 同时Java有沙箱安全机制：自定义类的包名以 `java.`开头被禁止， 防止核心API被篡改，判断逻辑在defineClass方法中。
 
 
  ### 对象内存布局
@@ -240,5 +284,6 @@ CMS垃圾回收期回收过程：
 [class文常量池、运行时常量池、字符串常量池的区别](https://blog.csdn.net/weixin_45112292/article/details/118732695?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_title~default-0.control&spm=1001.2101.3001.4242)
 
 [线上服务的FGC问题排查，看这篇就够了！](https://mp.weixin.qq.com/s/P8s3kuceBNovUP5adXpFCQ)
+[Java类加载机制](https://zhuanlan.zhihu.com/p/25228545)
 
->>>>>>> 8e426fdc9f06283135745f7def3811ac6a2aa3f7
+[Java - 类加载器](https://blog.csdn.net/ZHHX666/article/details/124484199)
