--- a/source/_posts/面试/知识点问题汇总.md
+++ b/source/_posts/面试/知识点问题汇总.md
@@ -60,14 +60,21 @@ tags:
 
 ###  JVM
 
+* 内存结构
+* 参数调优
+
 #### 类加载器
 
 * 类加载器类型，
 * 自定义类类加载器过程
 
-####  参数调优
+####  
 
-#### 堆栈内存异常处理
+#### 堆栈内存异常处理 oom问题 
+
+jstat
+
+jmap
 
 ####  垃圾回收
 
@@ -95,16 +102,23 @@ tags:
 * 线程池如何调优
 * 线程池的最大线程数目根据什么确定
 * 核心线程 数怎么确定
+* 线程池实现原理
 
 #### 
 
 
 
-### aqs
+### AQS
 
-​	volatile的语义，它修饰的变量一定线程安全吗分段锁的原理,锁力度减小的思考
-
-​	分段锁的原理,锁力度减小的思考
+* AQS 原理
+* volatile的语义，它修饰的变量一定线程安全吗分段锁的原理,锁力度减小的思考
+* 分段锁的原理,锁力度减小的思考
+* 指令重排
+* 内存屏障
+* happends-before,
+* 可见性
+* 缓存一致性协议
+* 总线嗅探
 
 ####  JUC
 
@@ -120,7 +134,17 @@ tags:
 
 * 反射中，Class.forName和ClassLoader区别
 
-* 
+
+
+
+#### IO模型
+
+* NIO 
+* select, poll ,epoll
+* IO 多路复用
+* reactor模型
+* 零拷贝
+* mmap,sendfile
 
 ## 中间件
 
@@ -130,30 +154,33 @@ tags:
 #### mysql,
 
 * 列举出你能想到的数据库分库分表策略；分库分表后，如何解决全表查询的问题。
+* innodb 和myisam 
+* 事务隔离级别
+* B+树
+* 为什么用B+树
+* 脏读，不可重复读，幻读为什么会出现，怎么解决，MVCC原理，间隙锁
+* mysql 分库分表
 
 #### pg,
 
 #### redis,
 
 * Redis 持久化方案
-
 * 缓存机器缩扩容如何对系统影响最小，一致性哈希的实现
-
 * Redis持久化的几种方式，优缺点是什么，怎么实现的
-
-* Redis的缓存失效策略
-
+* Redis的缓存失效策略（key过期策略）
+* redis 内存淘汰策略
 * 缓存穿透的解决办法
-
 * redis集群，高可用，原理
-
+* redis 哨兵机制 和 Redis cluster 区别，原理
 * Reids三种不同删除策略
-
 * mySQL里有2000w数据，redis中只存20w的数据，如何保证redis中的数据都是热点数据 
 
 #### es,
 
   * es 更新延迟问题 
+  * ES倒排索引原理，
+  * FDS原理
 
 #### mongo,
 
@@ -169,6 +196,8 @@ tags:
 * kafka怎么实现分区平衡
 * kafka高吞吐的原理 5种
 * kafka生产者的负载均衡怎么做的
+* 消息重复消费怎么解决
+* 消息顺序消费怎么解决
 
 #### RocketMQ
 
