--- a/source/_posts/2020/每日一问0325(JVM).md
+++ b/source/_posts/2020/每日一问0325(JVM).md
@@ -14,8 +14,8 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
 
 线程共享的：
 - 堆
-- 方法区
-- 直接内存 
+- 方法区(原来的永久代)
+- 直接内存(元数据区) 
 
 #### 程序计数器
  执行分支，循环，跳转，异常处理，线程恢复，线程切换后能恢复到正确的执行位置；程序计数器是不会内存溢出的。
@@ -28,7 +28,14 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
  - StackOverFlowError： 若Java虚拟机栈的内存大小不允许动态扩展，那么当线程请求栈的深度超过当前Java虚拟机栈的最大深度的时候，就抛出StackOverFlowError异常。
  - OutOfMemoryError： 若 Java 虚拟机栈的内存大小允许动态扩展，且当线程请求栈时内存用完了，无法再动态扩展了，此时抛出OutOfMemoryError异常。
 
+### 本地方法栈
+
+本地方法栈和虚拟机栈类似，只不过 本地方法栈 是为Native 方法服务。
+
  #### 堆
+
+![img](../../ImgSource/v2-a9db60322f45037897b5f183c7fc19af_r.jpg)
+
  所有线程共享； 此内存区域的唯一目的就是存放对象实例，几乎所有的对象实例以及数组都在这里分配内存。
 
  Eden-s1-s2 (新生代) oldGeneration （老年代） perm (永久代)
@@ -36,7 +43,7 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
  JDK1.8 已经去除 永久代 而用 元空间代替，元空间存储在物理内存，受到本机物理内存限制
 
 
- #### 方法区
+ #### 方法区(永久代，1.8及以后废除)
   共享 
  #### 直接内存
  NIO 流  堆外内存， 避免 Java堆和NATIVE堆 复制数据。
@@ -54,6 +61,17 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
  4）设置对象头
 
  5) 执行 init 方法  执行前只是虚拟机新的对象产生了 ，执行完 Java代码才认 
+
+
+
+#### 申请一块内存的过程
+
+1. JVM会试图为相关Java对象在Eden中初始化一块内存区域
+2. 当Eden空间足够时，内存申请结束。否则到下一步
+3. JVM试图释放在Eden中所有不活跃的对象（这属于1或更高级的垃圾回收）；释放后若Eden空间仍然不足以放入新对象，则试图将部分Eden中活跃对象放入Survivor区/OLD区
+4. Survivor区被用来作为Eden及OLD的中间交换区域，当OLD区空间足够时，Survivor区的对象会被移到Old区，否则会被保留在Survivor区
+5. 当OLD区空间不够时，JVM会在OLD区进行完全的垃圾收集（0级）
+6. 完全垃圾收集后，若Survivor及OLD区仍然无法存放从Eden复制过来的部分对象，导致JVM无法在Eden区为新对象创建内存区域，则出现”out of memory错误”
 
 ### 类加载器
 
@@ -86,7 +104,18 @@ Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成
 4. Bootstrap加载器加载失败(不在它负责的目录范围)则向下交给ExtClassLoader加载器。
 5. ExtClassLoader加载器会从它负责的目录中尝试加载，加载失败则向下交给AppClassLoader加载器
 6. AppClassLoader加载器从它负责的classpath尝试加载，加载完成。
-   
+
+#### class 文件结构
+
+**Class 文件**是**一组以 8 位字节为基础单位的二进制流**，各个数据严格按照顺序紧凑的排列在 Class 文件中，中间无任何分隔符，这使得整个 Class 文件中存储的内容几乎全部都是程序运行的必要数据，没有空隙存在。
+
+* 魔数与 Class 文件版本
+* 常量池
+* 访问标志
+* 类索引、父类索引与接口索引集合
+* 字段表集合
+* 方法表集合
+* 属性表集合
 
 ### 双亲委派模型
 
@@ -272,7 +301,18 @@ CMS垃圾回收期回收过程：
 
 ### JVM参数调优
 
+![img](../../ImgSource/v2-02aab413378feb217edf5da26bc1419f_b.jpg)
 
+* -Xms: 初始分配堆内存大小
+* -Xmx:最大允许分配的堆内存大小
+* -XX:+UseCompressedOops 
+* -XX:+UseG1GC/CMS 垃圾回收器
+* -XX:MaxDirectMemorySize 设置最大堆外内存，默认是-xmx-survivor，也就是基本上和-xmx大小相等
+* -Xss：每个线程的堆栈大小，默认1M
+* -Xmn: 年轻代大小（eden区+2 survivor）
+* -XX:newRatio: 4 年轻代与老年代1:4
+* -XX:survivorRatio: 8Eden区与survivor大小比值
+* -XX:+HeapDumpOnOutOfMemoryError参数来让虚拟机出现OOM的时候·自动生成dump文件
 
  ### 参考
  [Java代码的执行篇](https://xiaochengxinyizhan.blog.csdn.net/article/details/92385172)
@@ -287,3 +327,5 @@ CMS垃圾回收期回收过程：
 [Java类加载机制](https://zhuanlan.zhihu.com/p/25228545)
 
 [Java - 类加载器](https://blog.csdn.net/ZHHX666/article/details/124484199)
+[深入理解Java虚拟机（类文件结构）](https://www.cnblogs.com/uf9n1x/p/17334121.html)
+[列举一些你知道的打破双亲委派机制的例子，为什么要打破？ ](http://news.sohu.com/a/665831912_121124363)
