--- a/source/_posts/面试/每日一问0420(面试总结).md
+++ b/source/_posts/面试/每日一问0420(面试总结).md
@@ -59,8 +59,25 @@ tags:
 敏捷云系统 基于kubercontrol API ,搭建了公司的私有化云平台和公有云平台，harbor镜像 和二进制制品 公有云私有云打通。大镜像包的追加镜像构建。
 在敏捷云系统中研发人员可以快速构建代码库，生产制品，部署发布到任何集群。在集群中有可以管控容器的生命周期，环境变量，容器的CPU内存监控，日志采集，异常报警等等。
 
-
 小红唇
+
+小红唇涵盖了 美妆，塑身，时尚，生活四大频道。
+
+通过打造美妆社区，达人直播种草的方式引流 来售卖海外和国内的美妆产品。
+
+经营模式 以ToC 为主，也支持ToB 的商家加盟的模式。在16年登上了优酷自媒体Top100,日活高峰有500wUV. 双十一 日交易额达到了3000万 ，单台服务器瞬时QPS 3000+；
+
+
+
+我业务上主要负责小红唇商城的日常业务迭代，保障双十一618 大促 稳定，
+
+小红唇商城主要以分布式架构，通过业务解耦拆分了多个业务模块，我主要负责 订单系统支付系统。
+
+负责订单系统的整体设计。在订单系统针对秒杀大促等高并发场景
+
+
+
+
 
 订单系统模块的重构，
 原因 是由于订单模块是电商系统核心模块，更新迭代特别快，掺杂了很多复杂的业务。
