--- a/source/_posts/面试/知识点问题汇总.md
+++ b/source/_posts/面试/知识点问题汇总.md
@@ -38,6 +38,7 @@ tags:
 * 了解LinkedHashMap的应用吗
 * TreeMap的实现原理
 * 简述ConcurrentLinkedQueue和LinkedBlockingQueue的用处和不同之处
+* 对象在JVM中的生命周期
 
 
 
@@ -49,6 +50,11 @@ tags:
   * 内存分配方式有哪2种
 * 有没有可能2个不相等的对象有相同的hashcode
 * 双亲委派模型机制 过程/好处
+* 说一下强引用、软引用、弱引用、虚引用以及他们之间和gc的关系(不是重点)
+* 描述一下class 文件结构
+* 列举打破双亲委派的例子，为啥要打破。
+*  对象分配内存是否线程安全？
+* 请解释StackOverflowError和OutOfMemeryError的区别？
 
 ### JMM
 
@@ -60,10 +66,24 @@ tags:
 
 ###  JVM
 
+* jvm 组成
+*  jvm 每个部分的作用
+* String  类型 对象 在 jvm 上分配
+* jvm 常用的jvm参数，怎么调优 
+* 对象在JVM中的生命周期
+* 堆溢出的原因
+* 遇到过堆外内存溢出吗？
+* 遇到过元空间溢出吗？
+* JVM 提供的常用工具
+* SWAP会影响性能么？
+* 栈帧都有哪些数据？
+* 64 位 JVM 中，int 的长度是多数？
+
 #### 类加载器
 
 * 类加载器类型，
 * 自定义类类加载器过程
+* JDK 9 开始 Extension ClassLoader 被 Platform ClassLoader 取代，启动类加载器、平台类加载器、应用程序类加载器全都继承于 jdk.internal.loader.BuiltinClassLoader
 
 ####  参数调优
 
@@ -71,14 +91,41 @@ tags:
 
 ####  垃圾回收
 
-  * JVM垃圾回收机制，何时触发MinorGC等操作
-  * jvm中一次完整的GC流程（从ygc到fgc）是怎样的
-  * 新生代和老生代的内存回收策略 标记复制
-  * Eden和Survivor的比例分配（8：1：1）
-  * 垃圾收集器
-    * 你知道哪几种垃圾收集器，各自的优缺点，重点讲下cms，g1 
-  * 垃圾收集算法
-  * 说一下强引用、软引用、弱引用、虚引用以及他们之间和gc的关系(不是重点)
+* JVM垃圾回收机制，何时触发MinorGC等操作
+
+* jvm中一次完整的GC流程（从ygc到fgc）是怎样的
+
+* 新生代和老生代的内存回收策略 标记复制
+
+* Eden和Survivor的比例分配（8：1：1）
+
+* 你知道哪几种垃圾收集器，各自的优缺点，重点讲下cms，g1 
+
+* 垃圾收集算法
+
+* Java 8 为什么要将永久代(PermGen)替换为元空间(MetaSpace)呢？
+
+* Serial 与 Parallel GC 之间的不同之处？
+
+* 分代收集算法 ，哪个代适合哪种算法。
+
+* 什么是分布式垃圾回收（DGC）？它是如何工作的？
+
+* 说说ZGC垃圾收集器的工作原理
+
+* Serial 垃圾收集器（单线程、 复制算法）
+
+* GC roots 有哪些
+
+* safepoint是什么？
+
+* MinorGC，MajorGC、FullGC都什么时候发生？
+
+* JVM 年轻代到年老代的晋升过程的判断条件是什么呢？
+
+* 你都用过G1垃圾回收器的哪几个重要参数？
+
+  
 
 
 
@@ -87,7 +134,7 @@ tags:
 * 线程创建方式
 * 线程哪三种实现方式
 * 线程状态有哪些
-* 
+* 如何找到死锁的线程？
 
 #### 线程池
 
