--- a/source/_posts/2020/每日一问0330(多线程).md
+++ b/source/_posts/2020/每日一问0330(多线程).md
@@ -87,7 +87,7 @@ Executors线程池对象弊端如下：
 
 - unit：等待时间单位
 - threadFactory 
-- handler: 饱和策略
+- handler: 饱和策略 **当提交的任务数超过maxmumPoolSize与workQueue之和时，任务会交给RejectedExecutionHandler来处理**
 
 ### 饱和策略 
 - AbortPolicy： 抛异常
@@ -106,7 +106,16 @@ class Demo {
 }
 ```
 
+### 过程
+
+- A、当提交新任务时，若线程池大小小于corePoolSize，将创建一个新的线程来执行任务，即使此时线程池中存在空闲线程；
+- B、当提交新任务时，若线程池达到corePoolSize大小，新提交的任务将被放入workQueue中，等待线程池调度执行；
+- C、当提交新任务时，若workQueue已满，且maximumPoolSize>corePoolSize，将创建新的线程来执行任务；
+- D、当提交新任务时，若任务总数超过maximumPoolSize，新提交的任务将由RejectedExecutionHandler来处理；
+- E、当线程池中的线程数超过corePoolSize时，若线程的空闲时间达到keepAliveTime，则关闭空闲线程
+
 ## 核心参数设置
+
 ### 核心线程数
 CPU密集型：核心线程数 = CPU核数 + 1 (计算比较多)(这里核心线程数不是等于CPU核心数，是因为考虑CPU密集型任务由于某些原因而暂停，此时有额外的线程能确保CPU这个时刻不会浪费。但同时也会增加一个CPU上下文切换，因此核心线程数是等于CPU核心数？还是CPU核心数+1？可以根据实际情况来确定)
 
