--- a/source/_posts/面试/简历框架.md
+++ b/source/_posts/面试/简历框架.md
@@ -10,9 +10,7 @@ tags:
 
 
 
-   * 多年多业务领域互联网公司项目开发经验(电商，车联网，智慧城市，智慧交通)，负责参与过多个产品从零搭建，有项目管理经验。
-
-   * 对订单系统，支付系统有较为深刻的理解，并对高并发场景开发，系统架构设计，性能优化等有较为丰富的经验。
+   * ​                                                                                                                   对订单系统，支付系统有较为深刻的理解，并对高并发场景开发，系统架构设计，性能优化等有较为丰富的经验。
 
    * 擅长云边端及边缘计算相关业务。支撑Devops方面体系规划建设,支持云原生相关技术落地工作及参与数据仓库等大数据体系建设，垂直规划智能路口，智能驾驶等解决方案。
 
