--- a/source/_posts/读书/持续交付2.0.md
+++ b/source/_posts/读书/持续交付2.0.md
@@ -35,6 +35,8 @@ title:
 
 
 
+​				流水线发布周期
+
 #### 制品库
 
 外部软件包库，正式软件包库
@@ -49,13 +51,13 @@ title:
 
 
 
-#### 多组件步数流水线
+#### 多组件部署流水线
 
 如果一个软件产品由多个组件构建而成，每个组件均有独自的代码仓库，并且每个组件由一个单独的团队负责开发与维护，那么，整个产品的部署流水线的设计通常与图7-13相似。每个组件的部署流水线成功以后，都能触发下游的产品集成部署流水线。
 
 ![image-20231007110532633](../../ImgSource/image-20231007110532633.png)
 
-* 个人步数流水线
+* 个人部署流水线
 
   每名工程师都创建了自己专属的部署流水线，用于个人在未推送代码到团队仓库之前的快速质量反馈。个人部署流水线并不会部署到团队共同拥有的环境中，而是仅覆盖个人开发环环境
 
@@ -73,7 +75,7 @@ title:
 
 （3）个人部署流水线运行的测试用例与团队部署流水线前两个阶段的验证集合相同，假如团队部署流水线出现构建失败，则容易定位问题，例如工程师遗漏文件未提交。
 
-**UAT测试 是测试工程师在已经通过的刺激构建阶段中选择一个被测版本，根据需求完成情况手工触发。向UAT环境部署软件包，用于手工验收测试。 如果该版本通过了手工验收测试，则标记版本为已测试通过版本。 第五个阶段的性能测试也是手工触发**
+**UAT测试 是测试工程师在已经通过的次级构建阶段中选择一个被测版本，根据需求完成情况手工触发。向UAT环境部署软件包，用于手工验收测试。 如果该版本通过了手工验收测试，则标记版本为已测试通过版本。 第五个阶段的性能测试也是手工触发**
 
 ![image-20231007150652058](../../ImgSource/image-20231007150652058.png)
 
@@ -82,6 +84,8 @@ title:
 第三个阶段开始，每个阶段都只有一个任务。第三个阶段是“UAT部署”，将软件包部署到手工UAT环境（用户验收环境，User Acceptance Environment）。第四个阶段是“UAT结果”，测试人员手工验证完成后，将其标记为“验收通过”。第五个阶段是“性能测试”，就是做自动化性能测试。第六个阶段是“内部体验”，就是将Alpha版本部署到企业内部服务器，给内部其他团队试用。第七个阶段是“外部体验”，就是将Beta版本发给外部的企业用户体验。第八个阶段是“上传发布”，就是上传版本。将确定的商业发布版本上传到指定服务器，供用户登录产品网站自行下载。
 
 ![image-20231007151957769](../../ImgSource/image-20231007151957769.png)
+
+GoCD在2008年的部署流水线2
 
 ![image-20231007112122615](../../ImgSource/image-20231007112122615.png)
 
@@ -177,6 +181,8 @@ title:
 
 ![image-20231007141235334](../../ImgSource/image-20231007141235334.png)
 
+（1）开发人员将代码提交到代码仓库。（2）持续集成服务器按一定的时间间隔（如每隔1分钟）对代码仓库进行轮询，发现有代码变更。（3）持续集成服务器自动将最新代码检出到已准备好的专用服务器上（如果应用规模不大，可以与持续集成服务器是同一台机器）。
+
 （4）在专用服务器上运行由持续集成服务器指定的构建脚本或命令，对最新代码进行检查（如代码动静态扫描、编译打包、运行单元测试、部署并运行功能测试等）。（5）运行结束后，将验证结果（成功或者失败）反馈给开发团队。为了能够做到“省时省力”，可以通过自动化方式运行大量的质量检验项（包括自动化测试、代码规范检查、代码安全扫描等）。“持续集成”这一实践直接体现了快速验证环的基本工作原则，即“质量内建，快速反馈”。每当工程师完成一项开发任务后，必须通过运行一系列的自动化质量检查，验证其所写代码的质量是否达到了团队能接受的软件质量标准。
 
 ##### 9.2 六步提交法
@@ -265,3 +271,65 @@ title:
 2. 流水线
 
 制品库讲了 制品库的分类，各个类别的作用以及这样做的意义。
+
+| service           | Table Name                             | weekUp               | MonthUp               | halfYearUp             | YearUP                 |
+| :---------------- | :------------------------------------- | :------------------- | :-------------------- | :--------------------- | :--------------------- |
+| erp-devops-server | publish\_server\_node                  | &lt;513行&lt;22683KB | &lt;1025行&lt;45366KB | &lt;2564行&lt;113416KB | &lt;5127行&lt;226832KB |
+| erp-devops-server | internal\_audit\_attachment            | &lt;207行&lt;462KB   | &lt;414行&lt;925KB    | &lt;1035行&lt;2312KB   | &lt;2070行&lt;4624KB   |
+| erp-devops-server | publish\_approval\_task                | &lt;1903行&lt;258KB  | &lt;3806行&lt;515KB   | &lt;9516行&lt;1288KB   | &lt;19031行&lt;2576KB  |
+| erp-devops-server | deploy\_version\_log                   | &lt;826行&lt;194KB   | &lt;1653行&lt;387KB   | &lt;4132行&lt;968KB    | &lt;8263行&lt;1936KB   |
+| erp-devops-server | internal\_audit\_routine\_log\_result  | &lt;78行&lt;166KB    | &lt;157行&lt;333KB    | &lt;392行&lt;832KB     | &lt;783行&lt;1664KB    |
+| erp-devops-server | package\_version                       | &lt;1行&lt;155KB     | &lt;1行&lt;310KB      | &lt;4行&lt;776KB       | &lt;7行&lt;1552KB      |
+| erp-devops-server | operation\_log                         | &lt;245行&lt;35KB    | &lt;489行&lt;70KB     | &lt;1223行&lt;176KB    | &lt;2446行&lt;352KB    |
+| erp-devops-server | publish\_approval\_node                | &lt;303行&lt;32KB    | &lt;605行&lt;64KB     | &lt;1514行&lt;160KB    | &lt;3027行&lt;320KB    |
+| erp-devops-server | publish\_server                        | &lt;191行&lt;24KB    | &lt;381行&lt;48KB     | &lt;954行&lt;120KB     | &lt;1907行&lt;240KB    |
+| erp-devops-server | internal\_audit\_routine\_result       | &lt;13行&lt;19KB     | &lt;25行&lt;38KB      | &lt;63行&lt;96KB       | &lt;126行&lt;192KB     |
+| erp-devops-server | publish                                | &lt;64行&lt;16KB     | &lt;127行&lt;32KB     | &lt;319行&lt;80KB      | &lt;637行&lt;160KB     |
+| erp-devops-server | machine\_info                          | &lt;33行&lt;14KB     | &lt;66行&lt;29KB      | &lt;166行&lt;72KB      | &lt;331行&lt;144KB     |
+| erp-devops-server | internal\_audit\_attachment\_file      | &lt;36行&lt;8KB      | &lt;72行&lt;16KB      | &lt;181行&lt;40KB      | &lt;362行&lt;80KB      |
+| erp-devops-server | mobile\_package\_version               | &lt;25行&lt;8KB      | &lt;51行&lt;16KB      | &lt;127行&lt;40KB      | &lt;254行&lt;80KB      |
+| erp-devops-server | nginx\_conf\_upstream\_server          | &lt;0行&lt;6KB       | &lt;0行&lt;13KB       | &lt;0行&lt;32KB        | &lt;0行&lt;64KB        |
+| erp-devops-server | app\_internal\_audit\_dic              | &lt;16行&lt;6KB      | &lt;33行&lt;13KB      | &lt;82行&lt;32KB       | &lt;164行&lt;64KB      |
+| erp-devops-server | nginx\_conf\_location                  | &lt;0行&lt;6KB       | &lt;0行&lt;13KB       | &lt;0行&lt;32KB        | &lt;0行&lt;64KB        |
+| erp-devops-server | internal\_audit\_backup\_log\_result   | &lt;10行&lt;6KB      | &lt;19行&lt;13KB      | &lt;48行&lt;32KB       | &lt;95行&lt;64KB       |
+| erp-devops-server | nginx\_node                            | &lt;1行&lt;5KB       | &lt;1行&lt;10KB       | &lt;3行&lt;24KB        | &lt;6行&lt;48KB        |
+| erp-devops-server | server\_node                           | &lt;27行&lt;5KB      | &lt;54行&lt;10KB      | &lt;136行&lt;24KB      | &lt;271行&lt;48KB      |
+| erp-devops-server | project\_leader                        | &lt;22行&lt;5KB      | &lt;44行&lt;10KB      | &lt;110行&lt;24KB      | &lt;219行&lt;48KB      |
+| erp-devops-server | nginx\_conf\_server                    | &lt;0行&lt;5KB       | &lt;0行&lt;10KB       | &lt;0行&lt;24KB        | &lt;0行&lt;48KB        |
+| erp-devops-server | nginx\_conf\_upstream                  | &lt;0行&lt;3KB       | &lt;0行&lt;6KB        | &lt;0行&lt;16KB        | &lt;0行&lt;32KB        |
+| erp-devops-server | db\_user                               | &lt;1行&lt;2KB       | &lt;1行&lt;3KB        | &lt;3行&lt;8KB         | &lt;5行&lt;16KB        |
+| erp-devops-server | machine\_location                      | &lt;2行&lt;2KB       | &lt;3行&lt;3KB        | &lt;8行&lt;8KB         | &lt;15行&lt;16KB       |
+| erp-devops-server | internal\_audit\_backup                | &lt;0行&lt;2KB       | &lt;1行&lt;3KB        | &lt;2行&lt;8KB         | &lt;3行&lt;16KB        |
+| erp-devops-server | db\_source\_user                       | &lt;0行&lt;2KB       | &lt;1行&lt;3KB        | &lt;2行&lt;8KB         | &lt;3行&lt;16KB        |
+| erp-devops-server | package\_info                          | &lt;0行&lt;2KB       | &lt;0行&lt;3KB        | &lt;0行&lt;8KB         | &lt;0行&lt;16KB        |
+| erp-devops-server | user\_role                             | &lt;9行&lt;2KB       | &lt;17行&lt;3KB       | &lt;44行&lt;8KB        | &lt;87行&lt;16KB       |
+| erp-devops-server | db\_source                             | &lt;1行&lt;2KB       | &lt;1行&lt;3KB        | &lt;4行&lt;8KB         | &lt;7行&lt;16KB        |
+| erp-devops-server | user                                   | &lt;2行&lt;2KB       | &lt;4行&lt;3KB        | &lt;11行&lt;8KB        | &lt;22行&lt;16KB       |
+| erp-devops-server | machine\_brand                         | &lt;1行&lt;2KB       | &lt;2行&lt;3KB        | &lt;4行&lt;8KB         | &lt;8行&lt;16KB        |
+| erp-devops-server | db\_node                               | &lt;0行&lt;2KB       | &lt;1行&lt;3KB        | &lt;2行&lt;8KB         | &lt;4行&lt;16KB        |
+| erp-devops-server | team\_user                             | &lt;8行&lt;2KB       | &lt;17行&lt;3KB       | &lt;42行&lt;8KB        | &lt;83行&lt;16KB       |
+| erp-devops-server | internal\_audit\_system                | &lt;0行&lt;2KB       | &lt;1行&lt;3KB        | &lt;2行&lt;8KB         | &lt;3行&lt;16KB        |
+| erp-devops-server | home\_page\_team\_statistics           | &lt;0行&lt;2KB       | &lt;0行&lt;3KB        | &lt;0行&lt;8KB         | &lt;0行&lt;16KB        |
+| erp-devops-server | nginx\_info                            | &lt;0行&lt;2KB       | &lt;0行&lt;3KB        | &lt;0行&lt;8KB         | &lt;0行&lt;16KB        |
+| erp-devops-server | db\_info                               | &lt;1行&lt;2KB       | &lt;2行&lt;3KB        | &lt;4行&lt;8KB         | &lt;8行&lt;16KB        |
+| erp-devops-server | team                                   | &lt;1行&lt;2KB       | &lt;3行&lt;3KB        | &lt;7行&lt;8KB         | &lt;14行&lt;16KB       |
+| erp-devops-server | internal\_audit\_server\_form          | &lt;0行&lt;2KB       | &lt;1行&lt;3KB        | &lt;2行&lt;8KB         | &lt;3行&lt;16KB        |
+| erp-devops-server | home\_page\_statistics                 | &lt;0行&lt;2KB       | &lt;0行&lt;3KB        | &lt;0行&lt;8KB         | &lt;0行&lt;16KB        |
+| erp-devops-server | project\_machine\_pool                 | &lt;9行&lt;2KB       | &lt;18行&lt;3KB       | &lt;44行&lt;8KB        | &lt;88行&lt;16KB       |
+| erp-devops-server | home\_page\_month\_publish\_statistics | &lt;5行&lt;2KB       | &lt;10行&lt;3KB       | &lt;24行&lt;8KB        | &lt;48行&lt;16KB       |
+| erp-devops-server | app\_accept\_audit\_result             | &lt;0行&lt;2KB       | &lt;0行&lt;3KB        | &lt;0行&lt;8KB         | &lt;0行&lt;16KB        |
+| erp-devops-server | server\_info                           | &lt;4行&lt;2KB       | &lt;9行&lt;3KB        | &lt;22行&lt;8KB        | &lt;44行&lt;16KB       |
+| erp-devops-server | home\_page\_day\_publish\_statistics   | &lt;2行&lt;2KB       | &lt;4行&lt;3KB        | &lt;9行&lt;8KB         | &lt;18行&lt;16KB       |
+| erp-devops-server | internal\_audit\_routine               | &lt;2行&lt;2KB       | &lt;3行&lt;3KB        | &lt;8行&lt;8KB         | &lt;15行&lt;16KB       |
+| erp-devops-server | server\_domain\_name                   | &lt;2行&lt;2KB       | &lt;4行&lt;3KB        | &lt;10行&lt;8KB        | &lt;20行&lt;16KB       |
+| erp-devops-server | project\_info                          | &lt;2行&lt;2KB       | &lt;3行&lt;3KB        | &lt;9行&lt;8KB         | &lt;17行&lt;16KB       |
+| erp-devops-server | environment\_info                      | &lt;0行&lt;2KB       | &lt;0行&lt;3KB        | &lt;1行&lt;8KB         | &lt;2行&lt;16KB        |
+| erp-devops-server | internal\_audit\_result                | &lt;0行&lt;2KB       | &lt;1行&lt;3KB        | &lt;2行&lt;8KB         | &lt;3行&lt;16KB        |
+| erp-devops-server | server\_db\_source                     | &lt;2行&lt;2KB       | &lt;4行&lt;3KB        | &lt;11行&lt;8KB        | &lt;22行&lt;16KB       |
+| erp-devops-server | project\_environment                   | &lt;6行&lt;2KB       | &lt;12行&lt;3KB       | &lt;30行&lt;8KB        | &lt;60行&lt;16KB       |
+| erp-devops-server | domain\_name                           | &lt;3行&lt;2KB       | &lt;6行&lt;3KB        | &lt;14行&lt;8KB        | &lt;28行&lt;16KB       |
+| erp-devops-server | role\_permission                       | &lt;3行&lt;2KB       | &lt;6行&lt;3KB        | &lt;14行&lt;8KB        | &lt;28行&lt;16KB       |
+| erp-devops-server | internal\_audit\_backup\_result        | &lt;4行&lt;2KB       | &lt;7行&lt;3KB        | &lt;19行&lt;8KB        | &lt;37行&lt;16KB       |
+| erp-devops-server | permission                             | &lt;3行&lt;2KB       | &lt;6行&lt;3KB        | &lt;16行&lt;8KB        | &lt;32行&lt;16KB       |
+| erp-devops-server | machine\_os\_version                   | &lt;2行&lt;2KB       | &lt;4行&lt;3KB        | &lt;11行&lt;8KB        | &lt;22行&lt;16KB       |
+| erp-devops-server | role                                   | &lt;1行&lt;2KB       | &lt;1行&lt;3KB        | &lt;3行&lt;8KB         | &lt;6行&lt;16KB        |
