--- a/source/_posts/2020/每日一问1224(es概念篇).md
+++ b/source/_posts/2020/每日一问1224(es概念篇).md
@@ -21,7 +21,7 @@ _index指向一个或多个物理分片的逻辑命名空间，_type类型用于
 
 索引与分片的关系如下图所示:
 
-![avator](D:\workspace\0zmkWorkSpace\javaWorkspace\myGitWorkspace\java-learn-dictionary\markdown\ImgSource\es_shard1.png)
+![avator](../../ImgSource/es_shard1.png)
 
  	一个ES索引包含很多分片，一个分片是一个Lucene的索引，它本身就是一个完整的搜索引擎，可以独立执行建立索引和搜索任务。Lucene索引又由很多分段组成，每个分段都是一个倒排索引。ES每次“refresh”都会生成一个新的分段，其中包含若干文档的数据。在每个分段内部，文档的不同字段被单独建立索引。每个字段的值由若干词（Term）组成，Term是原文本内容经过分词器处理和语言处理后的最终结果（例如，去除标点符号和转换为词根）。
 
