--- a/source/_posts/面试/面试经历/0803-理想汽车.md
+++ b/source/_posts/面试/面试经历/0803-理想汽车.md
@@ -34,7 +34,7 @@ tags:
 
    微服务的统一治理，报警监控
 
-   后期为了增强车主使用体验 开始做车机生活相关的业务，这块业务是ToC 的 包含车机端 和移动端，通过汽车上的检测设备 通过IOT 实时的传输车辆驾驶时的车辆检测信息，包括油量，胎压，汽车周围环境等等实时情况，通过kafka 传送到云端，通过AI算法部门计算辅助用户驾驶体验，危险情况报警，急刹等，还有车机上的智能语音的开发，通过智能语音助手 小梦，可以唤起车载摄像头在行驶过程中抓拍一个15秒的短视频，经过编辑 分享到车机端和移动端的短视频平台。
+   后期为了增强车主使用体验 开始做车机生活相关的业务，这块业务是ToC 的 包含车机端 和移动端，通过汽车上的检测设备 通过IOT 实时的传输车辆驾驶时的车辆检测信息，包括油量，胎压，汽车周围环境等等实时情况，通过kafka 传送到云端，通过AI算法部门计算辅助用户驾驶体验，危险情况报警，急刹等，还有车机上的智能语音的开发，通过智能语音助手 小智，可以唤起车载摄像头在行驶过程中抓拍一个15秒的短视频，经过编辑 分享到车机端和移动端的短视频平台。
 
    蘑菇拍拍，蘑菇电台，等等  在这期间 我们成立的敏捷开发小组，小组有10个人 是由我来负责的，在这期间积累了一些管理经验。
 
